array.island.Island.scala.error
Erreur de compilation :
Island:8: error: identifier expected but integer literal found.
    b = num[i+1]
              ^Island:9: error: ']' expected but ';' found.
    if (a<b) {
^