array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var compte = 0
  var a = 0
  var b = 0
  for (i <- 0 to (num.Length -2)) {
    a = num[i]
    b = num[i+1]
    if (a<b) {
      compte = compte +1
    }
  }
  return compte
}